refactored server creation